
syntax = "proto3";

option go_package = "/gen";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc ReadUser(ReadUserRequest) returns (ReadUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message CreateUserRequest {
    string name = 1;
    int32 age = 2;
}

message CreateUserResponse {
    string id = 1;
}

message ReadUserRequest {
    string id = 1;
}

message ReadUserResponse {
    string name = 1;
    int32 age = 2;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    int32 age = 3;
}

message UpdateUserResponse {
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
}